cc: Destroy pending_tree_duration_timer_ when reseting trees

This fixes a DCHECK during TileManagerPerfTests. LTHI::ResetTreesForTesting
destroys the pending tree, so if it doesn't also destroy
the pending tree duration timer, the next call to CreatePendingTree
will fail the DCHECK that the timer doesn't already exist.

BUG=607818
CQ_INCLUDE_TRYBOTS=tryserver.blink:linux_blink_rel

Review-Url: https://codereview.chromium.org/2027803003
Cr-Commit-Position: refs/heads/master@{#397180}

Former-commit-id: 234a1a16b8e3641a4d3e065344a8cc32b5ea431f